changed id to class
Changed line 58 id share to class "share" because id "share" was used

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <h3 id="post">SHARE THIS POST</h3>
                         <p id="share">If you like this article, please take a second to share it with the world and help idealUI grow&#33;</p>
 
-                        <div id="share">
+                        <div class="share">
                            <ul>
                                <li><i class="fa fa-facebook"></i> facebook<a href=""></a></li>
                                <li><i class="fa fa-twitter"></i> twitter<a href=""></a></li>
