--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
 <html lang="en">
     <head>
+        <title>Blog</title>
         <meta charset="utf-8">
+        <meta name-"viewport" content="width=device-width, initial-scale=1.0"/>
         <link href="css/reset.css" rel="stylesheet" type="text/css">
         <link href="css/main.css" rel="stylesheet" type="text/css">
         <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,300' rel='stylesheet' type='text/css'>
@@ -10,7 +12,6 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
         <!--font awesome web fonts for icons-->
         <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![end if]-->
-        <title>designation.io</title>
     </head>
     <body>
         <header class="intro">
@@ -62,21 +63,21 @@
 
                         <div class="share_buttons" >
                            <ul class="share">
-                               <li><a href="http://www.facebook.com/"><i class="fa fa-facebook"></i> facebook</a></li>
-                               <li><a href="http://www.twitter.com/"><i class="fa fa-twitter"></i> twitter</a></li>
-                               <li><a href="http://www.pinterest.com/"><i class="fa fa-pinterest"></i>pinterest</a></li>
-                               <li><a href="https://plus.google.com/"><i class="fa fa-google-plus"></i>google</a></li>
+                               <a href="http://www.facebook.com/"><li><i class="fa fa-facebook"></i> <span class="texts">facebook</span></li></a>
+                               <a href="http://www.twitter.com/"><li><i class="fa fa-twitter"></i> <span class="texts">twitter</span></li></a>
+                               <a href="http://www.pinterest.com/"><li><i class="fa fa-pinterest"></i><span class="texts">pinterest</span></li></a>
+                               <a href="https://plus.google.com/"><li><i class="fa fa-google-plus"></i><span class="texts">google</span></li></a>
                            </ul>
                        </div>
                    </section>
                 
                 <aside class="page_link cf">
                     <a href="#" class="previous">
-                        <div><span class="light">PREVIOUS</span>HOW TO GET STARTED ON YOUR OWN CREATIVE STUDIO</div>
+                        <div><span class="light">PREVIOUS</span><span class="description">HOW TO GET STARTED ON YOUR OWN CREATIVE STUDIO</span></div>
                     </a>
                     
                     <a href="#" class="next">
-                        <div><span class="light">NEXT</span>ENHANCING USER EXPERIENCE WITH THE WEB SPEECH WITH API</div>
+                        <div><span class="light">NEXT</span><span class="description">ENHANCING USER EXPERIENCE WITH THE WEB SPEECH WITH API</span></div>
                     </a>
 
                 </aside>
